--- a/vitals-entry.html
+++ b/vitals-entry.html
@@ -93,7 +93,13 @@
                                     class="mt-1 focus:ring-red-500 focus:border-red-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
 
-                            <div class="sm:col-span-6">
+                            <div class="sm:col-span-2">
+                                <label for="glucose" class="block text-sm font-medium text-gray-700">Glucose (mmol/L)</label>
+                                <input type="number" name="glucose" id="glucose" min="1" max="30" step="0.1"
+                                    class="mt-1 focus:ring-red-500 focus:border-red-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+
+                            <div class="sm:col-span-4">
                                 <label for="notes" class="block text-sm font-medium text-gray-700">Clinical Notes</label>
                                 <textarea id="notes" name="notes" rows="3"
                                     class="shadow-sm focus:ring-red-500 focus:border-red-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
