--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalSigns | Settings</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <style>
+      @import url('https://cdn.tailwindcss.com');
+      /* Settings page styles */
+      .settings-card {
+        background: white;
+        border-radius: 0.5rem;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        transition: all 0.2s ease;
+      }
+      .settings-card:hover {
+        box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+      }
+      .settings-section {
+        border-bottom: 1px solid #e2e8f0;
+        transition: background 0.2s ease;
+      }
+      .settings-section:hover {
+        background: #f8fafc;
+      }
+      .switch-toggle {
+        position: relative;
+        display: inline-block;
+        width: 50px;
+        height: 24px;
+      }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
