--- a/history.html
+++ b/history.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalSigns | History</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <style>
+      @import url('https://cdn.tailwindcss.com');
+      /* History page styles */
+      .history-table {
+        border-collapse: separate;
+        border-spacing: 0;
+      }
+      .history-table th {
+        position: sticky;
+        top: 0;
+        background: white;
+        box-shadow: 0 2px 2px -1px rgba(0,0,0,0.1);
+      }
+      .history-item:hover {
+        background: #f8fafc;
+      }
+      .pagination-btn.active {
+        background: #2563eb;
+        color: white;
+      }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
