--- a/patient-profile.html
+++ b/patient-profile.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalSigns | Patient Profile</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <style>
+      @import url('https://cdn.tailwindcss.com');
+      /* Patient profile styles */
+      .patient-info-card {
+        background: white;
+        border-radius: 0.5rem;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s ease;
+      }
+      .patient-info-card:hover {
+        transform: translateY(-2px);
+      }
+      .medical-history-item {
+        border-left: 3px solid #2563eb;
+        padding-left: 1rem;
+      }
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="bg-gray-100">
